# haskarium

./: haskarium.cabal
doc/: 3.helloworld.md
exe/: Main.hs
exe/Haskarium/: Draw.hs  Generate.hs  Motion.hs  Types.hs  World.hs
exe/Haskarium/Class/: Drawable.hs  Generate.hs  Interactive.hs  Located.hs
exe/Haskarium/Creature/: Ant.hs  Centipede.hs  Flea.hs  Fly.hs  Types.hs
