name: haskarium
version: 0.1

cabal-version: >= 1.2
build-type: Simple

executable haskarium-view
    hs-source-dirs: exe
    main-is: Main.hs
    other-modules:  Haskarium.Const
                    Haskarium.Draw
                    Haskarium.Generate
                    Haskarium.Motion
                    Haskarium.Types
                    Haskarium.Util
                    Haskarium.World
                    Haskarium.Class.Drawable
                    Haskarium.Class.Generate
                    Haskarium.Class.Interactive
                    Haskarium.Class.Located
                    Haskarium.Creature.Ant
                    Haskarium.Creature.Centipede
                    Haskarium.Creature.Flea
                    Haskarium.Creature.Fly
                    Haskarium.Creature.Types

    build-depends:  base
                  , gloss
                  , mtl
                  , optparse-applicative
                  , random
